[package]
name = "web_stress_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web_stress_tester"
path = "src/main.rs"

[dependencies]
num_cpus = "1.14.0"
warp = "0.2"
parking_lot = "0.10.0"
ctrlc = { version = "3.2.3", features = ["termination"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
